Update page titles for EDR Telemetry Project

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EDR Telemetry Representation</title>
+    <title>EDR Telemetry Project</title>
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
     <!-- Link to Google Fonts for better typography -->
@@ -17,7 +17,7 @@
         <span class="inactive-tab">Premium Services (Coming Soon)</span>
     </nav>
     <div class="container">
-        <h1>Welcome to the EDR Telemetry Representation</h1>
+        <h1>Welcome to the EDR Telemetry Project</h1>
         <p>This website provides a comprehensive comparison of EDR (Endpoint Detection and Response) telemetry capabilities across different platforms.</p>
         <p>Select your desired platform below to view detailed telemetry data.</p>
         <div class="button-container">
