--- a/linux.html
+++ b/linux.html
@@ -15,7 +15,7 @@
         <span class="inactive-tab">Premium Services (Coming Soon)</span>
     </nav>
     <div class="container">
-        <h1>EDR Telemetry Representation - Linux</h1>
+        <h1>EDR Telemetry Project - Linux</h1>
         <p>Linux version coming soon!</p>
     </div>
 </body>
