--- a/scores.html
+++ b/scores.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EDR Telemetry Representation - Scores</title>
+    <title>EDR Telemetry Project - Scores</title>
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
     <!-- Link to Google Fonts for better typography -->
