--- a/windows.html
+++ b/windows.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EDR Telemetry Representation - Windows</title>
+    <title>EDR Telemetry Project - Windows</title>
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
