Refactor author section styles and add separator
- Refactored the author section styles to improve layout and responsiveness.
- Added a separator between the project description and the author section.
- Added README.md

--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
     <nav>
         <a href="index.html">EDR Telemetry</a>
         <a href="scores.html">Scores</a>
-        <a href="about.html">About</a>
-        <span class="inactive-tab">Premium Services (Coming Soon)</span>
+        <a href="about.html" class="active">About</a>
+        <span class="inactive-tab">Services (Coming Soon)</span>
     </nav>
     <div class="container">
         <h1>About the EDR Telemetry Project</h1>
@@ -37,6 +37,26 @@
         <p>
             <a href="https://detect.fyi/edr-telemetry-project-a-comprehensive-comparison-d5ed1745384b" target="_blank">EDR Telemetry Project: A Comprehensive Comparison</a>
         </p>
+        <!-- Separator added here -->
+        <div class="separator"></div>
+        <!-- Author and Maintainer Section -->
+        <h2>Author and Maintainer</h2>
+        <div class="author-section">
+            <img src="https://pbs.twimg.com/profile_images/1324840358405046272/mAwSPmaX_400x400.jpg" alt="Kostas" class="author-image">
+            <div class="author-info">
+                <p><strong>Kostas</strong> is a security researcher who focuses on Threat Intelligence, malware, Incident Response, and Threat Hunting. Known for his contributions to various open-source security projects, he is an active member of the cybersecurity community. Opinions are his own.</p>
+                <!-- Social Media Links Moved Below the Author's Bio Paragraph -->
+                <div class="social-media">
+                    <strong>Connect with Kostas:</strong><br>
+                    <a href="https://twitter.com/kostastsale" target="_blank">
+                        <img src="images/twitter-icon.png" alt="Twitter" class="social-icon"> @Kostastsale
+                    </a><br>
+                    <a href="https://www.linkedin.com/in/kostastsale/" target="_blank">
+                        <img src="images/linkedin-icon.png" alt="LinkedIn" class="social-icon"> /in/kostastsale
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
