Refactor inactive tab label in about.html

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <a href="index.html">EDR Telemetry</a>
         <a href="scores.html">Scores</a>
         <a href="about.html" class="active">About</a>
-        <span class="inactive-tab">Services (Coming Soon)</span>
+        <span class="inactive-tab">Premium Services (Coming Soon)</span>
     </nav>
     <div class="container">
         <h1>About the EDR Telemetry Project</h1>
