--- a/linux.html
+++ b/linux.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSE4W22ZYG"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WSE4W22ZYG');
+    </script>
     <meta charset="UTF-8">
     <title>EDR Telemetry Project - Linux</title>
     <!-- Link to external CSS -->
