--- a/scores.html
+++ b/scores.html
@@ -14,6 +14,8 @@
     <title>EDR Telemetry Project - Scores</title>
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Meta tag for mobile responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to Google Fonts for better typography -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
