--- a/windows.html
+++ b/windows.html
@@ -14,6 +14,8 @@
     <title>EDR Telemetry Project - Windows</title>
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Meta tag for mobile responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <!-- Navigation Bar -->
