Added contact us page along with sponsorship information.

--- a/about.html
+++ b/about.html
@@ -68,6 +68,12 @@
                 </div>
             </div>
         </div>
+        <!-- Contact Us Section -->
+        <div class="contact-us-section">
+            <p>If you have any questions, feedback, or are interested in contributing to the project, we'd love to hear from you!</p>
+            <a href="contact.html" class="contact-us-button">Contact Us</a>
+        </div>
+    </div>
     </div>
 </body>
 </html>
