Refactor sponsorship section in index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="sponsorship-section">
         <div class="sponsor-content">
             <h2>Sponsor Us</h2>
-            <p>We are seeking sponsors to support our project. Your sponsorship can help us maintain and improve the EDR Telemetry Project, providing valuable resources to the community.</p>
+            <p>Your sponsorship can help us maintain and improve the EDR Telemetry Project, providing valuable resources to the community.</p>
             <a href="contact.html" class="icon-button">
                 <img src="images/supporting-icon.png" alt="Support Icon" class="support-icon">
             </a>
