Add search functionality to scores and roadmap pages, enhance contact and scores sections

--- a/about.html
+++ b/about.html
@@ -25,33 +25,49 @@
         <a href="index.html">EDR Telemetry</a>
         <a href="scores.html">Scores</a>
         <a href="about.html" class="active">About</a>
-        <span class="inactive-tab">Premium Services (Coming Soon)</span>
+        <a href="roadmap.html">Roadmap</a>
+        <a href="sponsorship.html">Sponsorship</a>
     </nav>
-    <div class="container">
-        <h1>About the EDR Telemetry Project</h1>
-        <p>The EDR Telemetry Project aims to provide a comprehensive comparison of various Endpoint Detection and Response (EDR) solutions based on their telemetry capabilities. By analyzing the data collected from different EDR tools, the project helps organizations make informed decisions when selecting an EDR solution that best fits their security needs.</p>
-        <h2>Project Goals</h2>
-        <ul>
-            <li>Compare the telemetry data collected by different EDR solutions.</li>
-            <li>Identify strengths and weaknesses of each EDR in terms of data visibility.</li>
-            <li>Provide a resource for security professionals to evaluate EDR tools.</li>
-        </ul>
-        <h2>Data Collection</h2>
-        <p>The project gathers data by testing various EDR solutions in controlled environments and documenting the types of telemetry each one captures. This includes information on processes, network connections, file activities, and other security-relevant events.</p>
-        <h2>Contribute to the Project</h2>
-        <p>The EDR Telemetry Project is open-source and welcomes contributions from the community. If you'd like to contribute or learn more, please visit the project's GitHub repository linked below.</p>
-        <p>
-            <a href="https://github.com/tsale/EDR-Telemetry" target="_blank">GitHub Repository</a>
-        </p>
-        <h2>Further Reading</h2>
-        <p>For a detailed overview of the project's findings and methodologies, check out the blog post below:</p>
-        <p>
-            <a href="https://detect.fyi/edr-telemetry-project-a-comprehensive-comparison-d5ed1745384b" target="_blank">EDR Telemetry Project: A Comprehensive Comparison</a>
-        </p>
-        <!-- Separator added here -->
-        <div class="separator"></div>
-        <!-- Author and Maintainer Section -->
-        <h2>Author and Maintainer</h2>
+
+    <div class="about-container">
+        <div class="about-header">
+            <h1>About the EDR Telemetry Project</h1>
+            <p>A comprehensive comparison of EDR solutions based on their telemetry capabilities, helping organizations make informed security decisions.</p>
+        </div>
+
+        <div class="about-grid">
+            <div class="about-card">
+                <h2>Project Goals</h2>
+                <ul>
+                    <li>Compare EDR telemetry data collection</li>
+                    <li>Identify platform strengths and weaknesses</li>
+                    <li>Guide security professionals in tool selection</li>
+                    <li>Promote transparency in EDR capabilities</li>
+                </ul>
+            </div>
+
+            <div class="about-card">
+                <h2>Data Collection</h2>
+                <ul>
+                    <li>Controlled environment testing</li>
+                    <li>Process monitoring analysis</li>
+                    <li>Network connection tracking</li>
+                    <li>File activity monitoring</li>
+                </ul>
+            </div>
+
+            <div class="about-card">
+                <h2>Contribute</h2>
+                <ul>
+                    <li><a href="https://github.com/tsale/EDR-Telemetry" target="_blank">GitHub Repository</a></li>
+                    <li><a href="https://detect.fyi/edr-telemetry-project-a-comprehensive-comparison-d5ed1745384b" target="_blank">Read the Blog Post</a></li>
+                    <li>Submit issues and suggestions</li>
+                    <li>Join our community</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Author Section -->
         <div class="author-section">
             <img src="https://pbs.twimg.com/profile_images/1324840358405046272/mAwSPmaX_400x400.jpg" alt="Kostas" class="author-image">
             <div class="author-info">
@@ -68,12 +84,12 @@
                 </div>
             </div>
         </div>
-        <!-- Contact Us Section -->
+
+        <!-- Contact Section -->
         <div class="contact-us-section">
             <p>If you have any questions, feedback, or are interested in contributing to the project, we'd love to hear from you!</p>
             <a href="contact.html" class="contact-us-button">Contact Us</a>
         </div>
-    </div>
     </div>
 </body>
 </html>
