--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,18 @@
         <a href="index.html">EDR Telemetry</a>
         <a href="scores.html">Scores</a>
         <a href="about.html">About</a>
-        <span class="inactive-tab">Premium Services (Coming Soon)</span>
+        <a href="roadmap.html">Roadmap</a>
+        <a href="sponsorship.html">Sponsorship</a>
     </nav>
 
-    <!-- Main Content Container -->
-    <div class="container">
-        <h1>Contact Us</h1>
-        <p>If you have any questions, feedback, or are interested in sponsoring the EDR Telemetry Project, please fill out the form below.</p>
-        
+    <div class="hero-section">
+        <div class="hero-content">
+            <h1>Contact Us</h1>
+            <p>Get in touch with us for questions, feedback, or sponsorship inquiries.</p>
+        </div>
+    </div>
+
+    <div class="content-section">
         <!-- Google Form Embed -->
         <div class="google-form-container">
             <!-- Contact Form -->
