--- a/scores.html
+++ b/scores.html
@@ -23,42 +23,90 @@
     <!-- Navigation Bar -->
     <nav>
         <a href="index.html">EDR Telemetry</a>
-        <a href="scores.html">Scores</a>
+        <a href="scores.html" class="active">Scores</a>
         <a href="about.html">About</a>
-        <span class="inactive-tab">Premium Services (Coming Soon)</span>
+        <a href="roadmap.html">Roadmap</a>
+        <a href="sponsorship.html">Sponsorship</a>
     </nav>
-    <div class="container">
-        <h1>EDR Telemetry Scores</h1>
-        <p>This page displays the comparative scores of different EDR solutions based on their telemetry capabilities.</p>
-        <div id="scoreTableContainer"></div>
 
-        <!-- Scoring Logic Section -->
-        <div class="scoring-logic">
-            <h2>Scoring Logic</h2>
-            <p>The scores are calculated based on two factors:</p>
-            <ol>
-                <li>
-                    <strong>Status Values:</strong> Each possible status a feature can have is assigned a specific value:
-                    <ul>
-                        <li><strong>Yes:</strong> 1</li>
-                        <li><strong>No:</strong> 0</li>
-                        <li><strong>Via EnablingTelemetry:</strong> 1</li>
-                        <li><strong>Partially:</strong> 0.5</li>
-                        <li><strong>Via EventLogs:</strong> 0.75</li>
-                        <li><strong>Pending Response:</strong> 0</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Feature Weights:</strong> Each telemetry feature (Sub-Category) has a weight representing its importance.
-                    <p>For the full list of feature weights, please refer to the project's <a href="https://github.com/tsale/EDR-Telemetry/blob/a1bb71c826fb1f0626bc29359ffe67abbdeb6cce/Tools/compare.py#L8-L60" target="_blank">Code Scoring Logic</a>.</p>
-                </li>
-            </ol>
-            <p>The total score for each EDR is calculated by summing the products of the status values and the feature weights for all telemetry features:</p>
-            <p class="formula"><em>Total Score = Σ (Status Value × Feature Weight)</em></p>
-            <p>This scoring method provides a nuanced comparison, taking into account both the availability of features and their relative importance.</p>
+    <div class="hero-section scores-hero">
+        <div class="hero-content">
+            <h1>EDR Telemetry Scores</h1>
+            <p class="hero-description">Compare and analyze the performance metrics of different EDR solutions based on their telemetry capabilities.</p>
         </div>
     </div>
-    <!-- Link to external JavaScript -->
+
+    <div class="content-section">
+        <!-- Score Table Section -->
+        <section class="table-section">
+            <div class="section-header">
+                <h2>Comparison Table</h2>
+                <p>Interactive comparison of EDR solutions and their telemetry features</p>
+            </div>
+            <div id="scoreTableContainer" class="table-container"></div>
+        </section>
+
+        <!-- Scoring Logic Section -->
+        <section class="scoring-logic-section">
+            <div class="section-header">
+                <h2>Understanding the Scores</h2>
+                <p>Learn how we calculate and compare EDR telemetry capabilities</p>
+            </div>
+            
+            <div class="scoring-cards">
+                <div class="scoring-card status-values">
+                    <h3>Status Values</h3>
+                    <div class="status-grid">
+                        <div class="status-item">
+                            <span class="status yes">Yes</span>
+                            <span class="value">1.0</span>
+                        </div>
+                        <div class="status-item">
+                            <span class="status partial">Partially</span>
+                            <span class="value">0.5</span>
+                        </div>
+                        <div class="status-item">
+                            <span class="status logs">Via EventLogs</span>
+                            <span class="value">0.75</span>
+                        </div>
+                        <div class="status-item">
+                            <span class="status enabling">Via EnablingTelemetry</span>
+                            <span class="value">1.0</span>
+                        </div>
+                        <div class="status-item">
+                            <span class="status no">No</span>
+                            <span class="value">0</span>
+                        </div>
+                        <div class="status-item">
+                            <span class="status pending">Pending Response</span>
+                            <span class="value">0</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="scoring-card weights">
+                    <h3>Feature Weights</h3>
+                    <p>Each telemetry feature is weighted based on its importance in the overall assessment.</p>
+                    <div class="weight-info">
+                        <a href="https://github.com/tsale/EDR-Telemetry/blob/a1bb71c826fb1f0626bc29359ffe67abbdeb6cce/Tools/compare.py#L8-L60" 
+                           target="_blank" 
+                           class="github-link">
+                            View Complete Weight Distribution on GitHub
+                        </a>
+                    </div>
+                </div>
+
+                <div class="scoring-card formula">
+                    <h3>Final Score Calculation</h3>
+                    <div class="formula-container">
+                        <p class="formula-text">Total Score = Σ (Status Value × Feature Weight)</p>
+                        <p class="formula-description">The final score represents the weighted sum of all features, providing a comprehensive evaluation of each EDR solution's telemetry capabilities.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
