Update navigation links to ensure consistent placement of the About page across all HTML files

--- a/linux.html
+++ b/linux.html
@@ -20,8 +20,9 @@
     <nav>
         <a href="index.html">EDR Telemetry</a>
         <a href="scores.html">Scores</a>
+        <a href="roadmap.html">Roadmap</a>
+        <a href="sponsorship.html">Sponsorship</a>
         <a href="about.html">About</a>
-        <span class="inactive-tab">Premium Services (Coming Soon)</span>
     </nav>
     <div class="container">
         <h1>EDR Telemetry Project - Linux</h1>
