--- a/scores.html
+++ b/scores.html
@@ -23,10 +23,10 @@
     <!-- Navigation Bar -->
     <nav>
         <a href="index.html">EDR Telemetry</a>
-        <a href="scores.html" class="active">Scores</a>
-        <a href="about.html">About</a>
+        <a href="scores.html">Scores</a>
         <a href="roadmap.html">Roadmap</a>
         <a href="sponsorship.html">Sponsorship</a>
+        <a href="about.html">About</a>
     </nav>
 
     <div class="hero-section scores-hero">
