--- a/sponsorship.html
+++ b/sponsorship.html
@@ -34,9 +34,9 @@
     <nav>
         <a href="index.html">EDR Telemetry</a>
         <a href="scores.html">Scores</a>
-        <a href="about.html">About</a>
         <a href="roadmap.html">Roadmap</a>
-        <a href="sponsorship.html" class="active">Sponsorship</a>
+        <a href="sponsorship.html">Sponsorship</a>
+        <a href="about.html">About</a>
     </nav>
     <div class="sponsorship-section">
         <div class="sponsor-content">
