--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">EDR Telemetry</a>
+        <a href="index.html" class="active">EDR Telemetry</a>
         <a href="scores.html">Scores</a>
         <a href="roadmap.html">Roadmap</a>
         <a href="sponsorship.html">Sponsorship</a>
