--- a/roadmap.html
+++ b/roadmap.html
@@ -20,7 +20,7 @@
     <nav>
         <a href="index.html">EDR Telemetry</a>
         <a href="scores.html">Scores</a>
-        <a href="roadmap.html">Roadmap</a>
+        <a href="roadmap.html" class="active">Roadmap</a>
         <a href="sponsorship.html">Sponsorship</a>
         <a href="about.html">About</a>
     </nav>
