--- a/sponsorship.html
+++ b/sponsorship.html
@@ -35,7 +35,7 @@
         <a href="index.html">EDR Telemetry</a>
         <a href="scores.html">Scores</a>
         <a href="roadmap.html">Roadmap</a>
-        <a href="sponsorship.html">Sponsorship</a>
+        <a href="sponsorship.html" class="active">Sponsorship</a>
         <a href="about.html">About</a>
     </nav>
     <div class="sponsorship-section">
