Implement mobile navigation menu and enhance navbar structure for improved usability

--- a/about.html
+++ b/about.html
@@ -22,11 +22,20 @@
 <body>
     <!-- Navigation Bar -->
     <nav>
-        <a href="index.html">EDR Telemetry</a>
-        <a href="scores.html">Scores</a>
-        <a href="roadmap.html">Roadmap</a>
-        <a href="sponsorship.html">Sponsorship</a>
-        <a href="about.html" class="active">About</a>
+        <div class="nav-container">
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="nav-links">
+                <a href="index.html">EDR Telemetry</a>
+                <a href="scores.html">Scores</a>
+                <a href="roadmap.html">Roadmap</a>
+                <a href="sponsorship.html">Sponsorship</a>
+                <a href="about.html">About</a>
+            </div>
+        </div>
     </nav>
 
     <div class="about-container">
@@ -91,5 +100,17 @@
             <a href="contact.html" class="contact-us-button">Contact Us</a>
         </div>
     </div>
+    <!-- Add Mobile Navigation Script -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const menuToggle = document.querySelector('.menu-toggle');
+            const navLinks = document.querySelector('.nav-links');
+            
+            menuToggle?.addEventListener('click', () => {
+                menuToggle.classList.toggle('active');
+                navLinks?.classList.toggle('active');
+            });
+        });
+    </script>
 </body>
 </html>
