--- a/roadmap.html
+++ b/roadmap.html
@@ -18,11 +18,20 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">EDR Telemetry</a>
-        <a href="scores.html">Scores</a>
-        <a href="roadmap.html" class="active">Roadmap</a>
-        <a href="sponsorship.html">Sponsorship</a>
-        <a href="about.html">About</a>
+        <div class="nav-container">
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="nav-links">
+                <a href="index.html">EDR Telemetry</a>
+                <a href="scores.html">Scores</a>
+                <a href="roadmap.html">Roadmap</a>
+                <a href="sponsorship.html">Sponsorship</a>
+                <a href="about.html">About</a>
+            </div>
+        </div>
     </nav>
 
     <div class="hero-section">
@@ -66,5 +75,17 @@
             </div>
         </div>
     </div>
+    <!-- Add Mobile Navigation Script -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const menuToggle = document.querySelector('.menu-toggle');
+            const navLinks = document.querySelector('.nav-links');
+            
+            menuToggle?.addEventListener('click', () => {
+                menuToggle.classList.toggle('active');
+                navLinks?.classList.toggle('active');
+            });
+        });
+    </script>
 </body>
 </html>
