--- a/sponsorship.html
+++ b/sponsorship.html
@@ -32,11 +32,20 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">EDR Telemetry</a>
-        <a href="scores.html">Scores</a>
-        <a href="roadmap.html">Roadmap</a>
-        <a href="sponsorship.html" class="active">Sponsorship</a>
-        <a href="about.html">About</a>
+        <div class="nav-container">
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="nav-links">
+                <a href="index.html">EDR Telemetry</a>
+                <a href="scores.html">Scores</a>
+                <a href="roadmap.html">Roadmap</a>
+                <a href="sponsorship.html">Sponsorship</a>
+                <a href="about.html">About</a>
+            </div>
+        </div>
     </nav>
     <div class="sponsorship-section">
         <div class="sponsor-content">
@@ -132,5 +141,16 @@
             </div>
         </div>
     </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const menuToggle = document.querySelector('.menu-toggle');
+            const navLinks = document.querySelector('.nav-links');
+            
+            menuToggle?.addEventListener('click', () => {
+                menuToggle.classList.toggle('active');
+                navLinks?.classList.toggle('active');
+            });
+        });
+    </script>
 </body>
 </html>
