Add feature to Basic Supporter tier: Private Discord channel invitation

--- a/sponsorship.html
+++ b/sponsorship.html
@@ -107,6 +107,7 @@
                         <div class="tier-name">Basic Supporter</div>
                         <div class="tier-price">$50<span>/month</span></div>
                         <ul class="tier-features">
+                            <li>Private Discord channel Invitation</li>
                             <li>Recognition on our website</li>
                             <li>Monthly newsletter</li>
                             <li>Early access to articles</li>
