Add blog page and update navigation links for improved accessibility

--- a/about.html
+++ b/about.html
@@ -30,10 +30,11 @@
             </div>
             <div class="nav-links">
                 <a href="index.html">EDR Telemetry</a>
+                <a href="blog.html">Blog</a>
                 <a href="scores.html">Scores</a>
                 <a href="roadmap.html">Roadmap</a>
                 <a href="sponsorship.html">Sponsorship</a>
-                <a href="about.html">About</a>
+                <a href="about.html" class="active">About</a>
             </div>
         </div>
     </nav>
