--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <!-- Navigation Bar -->
     <nav>
         <a href="index.html">EDR Telemetry</a>
+        <a href="blog.html">Blog</a>
         <a href="scores.html">Scores</a>
         <a href="roadmap.html">Roadmap</a>
         <a href="sponsorship.html">Sponsorship</a>
