--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <span></span>
             </div>
             <div class="nav-links">
-                <a href="index.html">EDR Telemetry</a>
+                <a href="index.html" class="active">EDR Telemetry</a>
+                <a href="blog.html">Blog</a>
                 <a href="scores.html">Scores</a>
                 <a href="roadmap.html">Roadmap</a>
                 <a href="sponsorship.html">Sponsorship</a>
