--- a/windows.html
+++ b/windows.html
@@ -28,6 +28,7 @@
             </div>
             <div class="nav-links">
                 <a href="index.html">EDR Telemetry</a>
+                <a href="blog.html">Blog</a>
                 <a href="scores.html">Scores</a>
                 <a href="roadmap.html">Roadmap</a>
                 <a href="sponsorship.html">Sponsorship</a>
