--- a/roadmap.html
+++ b/roadmap.html
@@ -26,8 +26,9 @@
             </div>
             <div class="nav-links">
                 <a href="index.html">EDR Telemetry</a>
+                <a href="blog.html">Blog</a>
                 <a href="scores.html">Scores</a>
-                <a href="roadmap.html">Roadmap</a>
+                <a href="roadmap.html" class="active">Roadmap</a>
                 <a href="sponsorship.html">Sponsorship</a>
                 <a href="about.html">About</a>
             </div>
