--- a/scores.html
+++ b/scores.html
@@ -30,7 +30,8 @@
             </div>
             <div class="nav-links">
                 <a href="index.html">EDR Telemetry</a>
-                <a href="scores.html">Scores</a>
+                <a href="blog.html">Blog</a>
+                <a href="scores.html" class="active">Scores</a>
                 <a href="roadmap.html">Roadmap</a>
                 <a href="sponsorship.html">Sponsorship</a>
                 <a href="about.html">About</a>
