--- a/sponsorship.html
+++ b/sponsorship.html
@@ -40,9 +40,10 @@
             </div>
             <div class="nav-links">
                 <a href="index.html">EDR Telemetry</a>
+                <a href="blog.html">Blog</a>
                 <a href="scores.html">Scores</a>
                 <a href="roadmap.html">Roadmap</a>
-                <a href="sponsorship.html">Sponsorship</a>
+                <a href="sponsorship.html" class="active">Sponsorship</a>
                 <a href="about.html">About</a>
             </div>
         </div>
