--- a/windows.html
+++ b/windows.html
@@ -67,7 +67,7 @@
                     <span class="legend-icon">⚠️</span>
                     <div class="legend-text">
                         <span class="legend-label">Partially</span>
-                        <span class="legend-description">Partially Implemented</span>
+                        <span class="legend-description">Partially Implemented (hover-over for explanation)</span>
                     </div>
                 </div>
                 <div class="legend-item">
@@ -101,7 +101,7 @@
                     <label for="hoverToggle">Toggle</label>
                     <span>Enable Hover Highlight</span>
                 </div>
-                <button id="showScoresButton" class="action-button primary-button">
+                <button id="showScoresButton" class="action-button primary-button" onclick="window.location.href='scores.html'"></button>
                     <span>Show Scores</span>
                 </button>
             </div>
