Add label to Show Scores button for improved accessibility

--- a/windows.html
+++ b/windows.html
@@ -101,7 +101,7 @@
                     <label for="hoverToggle">Toggle</label>
                     <span>Enable Hover Highlight</span>
                 </div>
-                <button id="showScoresButton" class="action-button primary-button" onclick="window.location.href='scores.html'"></button>
+                <button id="showScoresButton" class="action-button primary-button" onclick="window.location.href='scores.html'">
                     <span>Show Scores</span>
                 </button>
             </div>
