Add Mitre ATT&CK Mappings button and style action buttons for consistency

--- a/windows.html
+++ b/windows.html
@@ -104,6 +104,9 @@
                 <button id="showScoresButton" class="action-button primary-button" onclick="window.location.href='scores.html'">
                     <span>Show Scores</span>
                 </button>
+                <button id="showMitreButton" class="action-button primary-button" onclick="window.location.href='mitre_mappings.html'">
+                    <span>Mitre ATT&CK Mappings</span>
+                </button>
             </div>
             
             <div class="filter-group">
