Add community section with contributors and sponsors display, including donor information

--- a/index.html
+++ b/index.html
@@ -92,5 +92,41 @@
             });
         });
     </script>
+    <div class="community-section">
+        <div class="container">
+            <div class="section-group">
+                <h2>Project Contributors</h2>
+                <div id="contributorsSection" class="section-content">
+                    <div class="loading-spinner">
+                        <div class="spinner"></div>
+                        <p>Loading contributors...</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section-group">
+                <h2>Our Sponsors</h2>
+                <div id="sponsorsSection" class="section-content">
+                    <div class="loading-spinner">
+                        <div class="spinner"></div>
+                        <p>Loading sponsors...</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section-group">
+                <h2>One-Time Supporters</h2>
+                <div id="donorsSection" class="section-content">
+                    <div class="loading-spinner">
+                        <div class="spinner"></div>
+                        <p>Loading supporters...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Add the contributors.js script -->
+    <script src="js/contributors.js"></script>
 </body>
 </html>
