Update sponsorship benefits and replace Google Form with new contact form integration

--- a/sponsorship.html
+++ b/sponsorship.html
@@ -122,8 +122,7 @@
                         <ul class="tier-features">
                             <li>All Basic Supporter benefits</li>
                             <li>Priority feature requests</li>
-                            <li>Quarterly strategy calls</li>
-                            <li>Custom API access</li>
+                            <li>Quarterly strategic project updates</li>
                         </ul>
                         <a href="https://buy.stripe.com/bIYdSR5Hs8gkddm7st" class="tier-button-link">Become a Partner</a>
                     </div>
