--- a/contact.html
+++ b/contact.html
@@ -33,14 +33,10 @@
 
     <div class="content-section">
         <!-- Google Form Embed -->
-        <div class="google-form-container">
-            <!-- Contact Form -->
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd8m66IiTn7calXyB-IXUgGLHyzZOLMny-Z42JGeSRD9FEgrw/viewform?embedded=true" width="100%" height="1400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-        </div>
+        <iframe id="if21ap20" src="https://fill.formnx.com/f/edr-telemetry-contact-form-21ap20" frameborder="0" style="width: 1px; min-width: 100%;"></iframe>
+        <script src="https://formnx.com/js/iframeResizer.js"></script>
+        <script src="https://formnx.com/js/widget.js"></script>
     </div>
-    
-    
-
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 EDR Telemetry Project. All rights reserved.</p>
