Update EventLogs value and enhance descriptions in scores and windows HTML files

--- a/windows.html
+++ b/windows.html
@@ -81,14 +81,14 @@
                     <span class="legend-icon">🪵</span>
                     <div class="legend-text">
                         <span class="legend-label">Via EventLogs</span>
-                        <span class="legend-description">Via Windows EventLogs</span>
+                        <span class="legend-description">Collected from Windows Event Logs if enabled at the system level; not independently collected by the EDR via ETW.</span>
                     </div>
                 </div>
                 <div class="legend-item">
                     <span class="legend-icon">🎚️</span>
                     <div class="legend-text">
                         <span class="legend-label">Via EnablingTelemetry</span>
-                        <span class="legend-description">Additional telemetry that can be enabled</span>
+                        <span class="legend-description">Additional telemetry collection capability that can be enabled as part of the EDR product but is not ON by default.</span>
                     </div>
                 </div>
             </div>
