Add new blog post link for EDR Telemetry Project updates and insights

--- a/blog.html
+++ b/blog.html
@@ -122,8 +122,25 @@
                     <span class="blog-link">Read More →</span>
                 </div>
             </a>
+
+            <a href="https://kostas-ts.medium.com/edr-telemetry-project-exciting-new-updates-and-insights-2feb693bb4ba?sk=8126c3a8943119e0c28825cc846e6143" 
+            target="_blank" 
+            class="blog-card">
+             <img src="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*gD7KayUy00wfqeNfVRSkZA@2x.png" 
+                  alt="Linux vs Windows Telemetry Analysis" 
+                  class="blog-image">
+             <div class="blog-content">
+                 <h2 class="blog-title">EDR Telemetry Project: Exciting New Updates and Insights
+
+                 </h2>
+                 <p class="blog-excerpt">Explore the latest EDR Telemetry Project updates: new integrations, refined telemetry, community growth, and an upcoming Linux release!</p>
+                 <span class="blog-link">Read More →</span>
+             </div>
+         </a>
         </div>
     </div>
+
+    
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
