Refactor scoring logic and update platform links for improved EDR telemetry comparison

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
     </div>
 
     <section id="platforms" class="platform-section">
-        <div class="platform-grid">
-            <a href="windows.html" class="platform-card">
-                <h3>Windows Platform</h3>
-                <p>Deep dive into Windows EDR telemetry capabilities with detailed comparisons and insights.</p>
-                <div class="big-button">Get Started</div>
-            </a>
-            <div class="platform-card disabled">
-                <h3>Linux Platform</h3>
-                <p>Coming soon - Comprehensive analysis of Linux EDR telemetry capabilities.</p>
-                <div class="big-button disabled">Coming Soon</div>
+            <div class="platform-grid">
+                <a href="windows.html" class="platform-card">
+                    <h3>Windows Platform</h3>
+                    <p>Deep dive into Windows EDR telemetry capabilities with detailed comparisons and insights.</p>
+                    <div class="big-button">Get Started</div>
+                </a>
+                <a href="linux.html" class="platform-card">
+                    <h3>Linux Platform</h3>
+                    <p>Comprehensive analysis of Linux EDR telemetry capabilities.</p>
+                    <div class="big-button">Get Started</div>
+                </a>
             </div>
-        </div>
-    </section>
+        </section>
 
     <div class="sponsor-teaser">
         <div class="teaser-content">
