--- a/windows.html
+++ b/windows.html
@@ -149,6 +149,6 @@
     </script>
 
     <!-- Link to external JavaScript -->
-    <script src="script.js"></script>
+    <script src="js/windows_res_pull.js"></script>
 </body>
 </html>
