Replace "Sponsorship" links with "Premium Services" and add new premium_services.html page

--- a/linux.html
+++ b/linux.html
@@ -31,7 +31,7 @@
                 <a href="blog.html">Blog</a>
                 <a href="scores.html">Scores</a>
                 <a href="roadmap.html">Roadmap</a>
-                <a href="sponsorship.html">Sponsorship</a>
+                <a href="premium_services.html">Premium Services</a>
                 <a href="about.html">About</a>
             </div>
         </div>
