--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
                 <a href="blog.html" class="active">Blog</a>
                 <a href="scores.html">Scores</a>
                 <a href="roadmap.html">Roadmap</a>
-                <a href="sponsorship.html">Sponsorship</a>
+                <a href="premium_services.html">Premium Services</a>
                 <a href="about.html">About</a>
             </div>
         </div>
