--- a/roadmap.html
+++ b/roadmap.html
@@ -29,7 +29,7 @@
                 <a href="blog.html">Blog</a>
                 <a href="scores.html">Scores</a>
                 <a href="roadmap.html" class="active">Roadmap</a>
-                <a href="sponsorship.html">Sponsorship</a>
+                <a href="premium_services.html">Premium Services</a>
                 <a href="about.html">About</a>
             </div>
         </div>
