--- a/scores.html
+++ b/scores.html
@@ -33,7 +33,7 @@
                 <a href="blog.html">Blog</a>
                 <a href="scores.html" class="active">Scores</a>
                 <a href="roadmap.html">Roadmap</a>
-                <a href="sponsorship.html">Sponsorship</a>
+                <a href="premium_services.html">Premium Services</a>
                 <a href="about.html">About</a>
             </div>
         </div>
